--- a/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.html
+++ b/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.html
@@ -1,9 +1,9 @@
-<ion-card>
-  <ion-card-header>
-    <div [routerLink]="['/vacunas-detalle', vacunas.id]" *ngFor="let vacunas of Todas_Vacunas">
-      <ion-img class="icon-img" src="../../../../assets/img/vacuna.png"></ion-img>
-      <ion-label class="label-vacuna" color="tertiary">{{vacunas.nombre}}</ion-label> <br>
-      <ion-badge class="label-fecha" color="success">Aplicada: {{vacunas.fecha}}</ion-badge>
-    </div>
-  </ion-card-header>
+<ion-card *ngIf="Todas_Vacunas">
+    <ion-card-header>
+        <div [routerLink]="['/vacunas-detalle', vacunas.id]" *ngFor="let vacunas of Todas_Vacunas">
+            <ion-img class="icon-img" src="../../../../assets/img/vacuna.png"></ion-img>
+            <ion-label class="label-vacuna" color="tertiary">{{vacunas.nombre|titlecase}}</ion-label> <br>
+            <ion-badge class="label-fecha" color="success">Aplicada: {{vacunas.fecha|date}}</ion-badge>
+        </div>
+    </ion-card-header>
 </ion-card>
