Diseño mejorado en la card de listas de los paciente

--- a/src/app/private/pages/citas-medicas/citas-medicas.page.scss
+++ b/src/app/private/pages/citas-medicas/citas-medicas.page.scss
@@ -11,6 +11,7 @@ ion-content::part(background) {
 
 div {
     background-color: #95a5a6a9;
+    background: red;
     width: 350px;
     height: 160px;
     border-radius: 15px;
