--- a/src/app/private/pages/examenes-medicos/examenes-medicos.page.html
+++ b/src/app/private/pages/examenes-medicos/examenes-medicos.page.html
@@ -4,9 +4,14 @@
 <ion-content [fullscreen]="true">
 
 
+   <div class="app">
     <ion-button type="button" [routerLink]="['/examenes-medicos-crear']" class="add">
         <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+        Añadir
     </ion-button>
+   </div>
+
+
     <app-card-examenes-medicos/>
 
 
