--- a/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.html
+++ b/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.html
@@ -1,16 +1,14 @@
-<ion-card>
-  <ion-card-header>
-    <div [routerLink]="['/examenes-medicos-detalle',examenmedico.id]" *ngFor="let examenmedico of ExamenesMedicos_Todos">
-      <div class="interno">
+
+    <div class="grid" [routerLink]="['/examenes-medicos-detalle',examenmedico.id]" *ngFor="let examenmedico of ExamenesMedicos_Todos">
+      <div class="flex-warp">
         <ion-img class="icon-img" src="../../../../assets/img/examen.png"></ion-img>
-        <div style="margin-left: 20px;">
-          <ion-label class="label-nombre" color="tertiary">{{examenmedico.nombre}}</ion-label>
-          <br>
-          <ion-badge class="label-fecha" color="success">{{examenmedico.fecha}}</ion-badge>
-        </div>
+      </div>
+      
+      <div class="block-warp-2">
+          <p class="title" color="tertiary">{{examenmedico.nombre}}</p>
+          <ion-badge class="description" color="success">{{examenmedico.fecha}}</ion-badge>
       </div>
 
     </div>
-  </ion-card-header>
-</ion-card>
+
 
