--- a/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.scss
+++ b/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.scss
@@ -1,55 +1,45 @@
-.add {
-  position: relative;
-  left: 180px;
-  width: 50px;
-  height: 50px;
+
+.grid {
+  grid-template-columns: 2fr auto;
+  display: flex;
+  margin: 20px;
+  border-radius: 12px;
+  background: #b8b4b4;
 }
 
-div {
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-}
-
-.active {
-  font-size: 30px;
-  margin-left: -70px;
-  margin-top: 30px;
-}
-
-.citas-formato {
-  font-size: 30px;
-  position: relative;
-  left: 30px;
+.flex-warp {
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
 }
 
 .icon-img {
+  display: flex;
+  align-items: center;
+  padding: 15px;
   width: 90px;
   height: 90px;
+  border: 2px solid black;
+  border-radius: 50%;
 }
 
-.interno{
-  display: flex;
-  justify-content: start;
-  align-items: center;
+.block-warp-2 {
+  display: block;
+  padding: 10px 10px 10px 20px;
 }
 
-.label-nombre {
-  font-size: 18pt;
-  font-weight: bold;
-  width: 100%;
-  color: rgb(69, 69, 69);
+.title {
+  font-weight: 700;
+  font-size: 18px;
 }
 
-.label-fecha {
+.description {
+  font-weight: 500;
   font-size: 15px;
-  margin-top: 10px;
+  padding: 15px;
+  color: black;
+  border-radius: 12px;
 }
 
 
-ion-card{
-  margin: 30px 30px 0px 30px;
-  border-radius: 13px;
-  background-color: rgba(245, 245, 245, 0.817);
-}
+
