--- a/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.html
+++ b/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.html
@@ -1,9 +1,11 @@
-<ion-card>
-  <ion-card-header>
-    <div [routerLink]="['/vacunas-detalle', vacunas.id]" *ngFor="let vacunas of Todas_Vacunas">
-      <ion-img class="icon-img" src="../../../../assets/img/vacuna.png"></ion-img>
-      <ion-label class="label-vacuna" color="tertiary">{{vacunas.nombre}}</ion-label> <br>
-      <ion-badge class="label-fecha" color="success">Aplicada: {{vacunas.fecha}}</ion-badge>
+
+    <div class="grid" [routerLink]="['/vacunas-detalle', vacunas.id]" *ngFor="let vacunas of Todas_Vacunas">
+      <div class="flex-warp">
+        <ion-img class="icon-img" src="../../../../assets/img/vacuna.png"></ion-img>
+      </div>
+
+      <div class="block-warp-2 ">
+        <p class="title">{{vacunas.nombre}}</p>
+        <ion-badge class="description" color="success">Aplicada: {{vacunas.fecha}}</ion-badge>
+      </div>
     </div>
-  </ion-card-header>
-</ion-card>
