--- a/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.scss
+++ b/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.scss
@@ -1,16 +1,3 @@
-div{
-    background-color: #95a5a6a9;
-    width: 350px;
-    height: 160px;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
-    margin-left: 0px;
-    margin-top: 20px;
-}
-
 .add{
     position: relative;
     left: 180px;
@@ -18,28 +5,44 @@ div{
     height: 50px;
 }
 
-.icon-img{
+.grid {
+    grid-template-columns: 2fr auto;
+    display: flex;
+    margin: 20px;
+    border-radius: 12px;
+    background: #b8b4b4;
+}
+
+.flex-warp {
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+  }
+  
+  .icon-img {
+    display: flex;
+    align-items: center;
     width: 90px;
     height: 90px;
-    position: relative;
-    top: 30px;
-    left: 25px;
-}
-
-.label-vacuna{
-    position: relative;
-    left: 145px;
-    top: -60px;
-    font-size: 30px;
-    white-space: normal;
-    word-wrap: break-word;
-    max-width: 80%;
-}
-
-.label-fecha{
-    position: relative;
-    left: 150px;
-    top: -60px;
+  }
+  
+  .block-warp-2 {
+    display: block;
+    padding: 10px 10px 10px 20px;
+  }
+  
+  .title {
+    font-weight: 700;
+    font-size: 18px;
+  }
+  
+  .description {
+    font-weight: 500;
     font-size: 15px;
-}
+    padding: 15px;
+    color: black;
+    border-radius: 12px;
+  }
+
+
 
