--- a/src/app/private/pages/chat/chat.page.scss
+++ b/src/app/private/pages/chat/chat.page.scss
@@ -16,8 +16,9 @@ ion-content::part(background) {
 .chat-container {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  /* padding: 10px; */
   margin-bottom: 2em;
+  padding: 20px;
 }
 
 .message {
