--- a/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.html
+++ b/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.html
@@ -2,50 +2,53 @@
 
 
 <ion-content [fullscreen]="true">
-  <div class="container-div">
-    <ion-img class="icon-img" src="../../../../assets/img/medicaments.png"></ion-img>
-    <ion-label class="label-vacuna" color="tertiary">{{VacunaDetalle?.vacunas.nombre}}</ion-label> <br>
-    <ion-badge class="label-fecha" color="success">Fecha de Aplicación: {{VacunaDetalle?.vacunas.fecha}}</ion-badge>
+    <div class="container-div">
+        <ion-img class="icon-img" src="../../../../assets/img/medicaments.png"></ion-img>
+        <ion-label class="label-vacuna" color="tertiary">{{VacunaDetalle?.vacunas.nombre}}</ion-label> <br>
+        <ion-badge class="label-fecha" color="success">Fecha de Aplicación: {{VacunaDetalle?.vacunas.fecha}}</ion-badge>
 
-    <ion-fab class="edit">
-      <ion-fab-button (click)=" EditVacuna()" color="warning">
-        <ion-icon name="create"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
+        <ion-fab class="edit">
+            <ion-fab-button (click)=" EditVacuna()" color="warning">
+                <ion-icon name="create"></ion-icon>
+            </ion-fab-button>
+        </ion-fab>
 
-    <ion-fab class="close">
-      <ion-fab-button (click)="DeleteMedicament()" color="danger">
-        <ion-icon name="close"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  </div>
+        <ion-fab class="close">
+            <ion-fab-button (click)="DeleteMedicament()" color="danger">
+                <ion-icon name="close"></ion-icon>
+            </ion-fab-button>
+        </ion-fab>
+    </div>
 
-  <form *ngIf="StateForm" [formGroup]="FormularioVacuna" (ngSubmit)="UpdateMedicament(FormularioVacuna.value)">
-    <!-- Input de Vacuna -->
+    <form style="margin: 0px 20px; margin-top: 30px;" *ngIf="StateForm" [formGroup]="FormularioVacuna" (ngSubmit)="UpdateMedicament(FormularioVacuna.value)">
+        <!-- Input de Vacuna -->
 
-    <ion-item>
-      <ion-icon name="skull-outline"></ion-icon>
-      <ion-input formControlName="nombre" class="inputs" label="Vacuna" labelPlacement="floating" placeholder="Pfizer"></ion-input>
-    </ion-item>
-    <div class="mt-1" *ngIf="FormularioVacuna.get('nombre')?.invalid && FormularioVacuna.get('nombre')?.touched">
-      <ion-badge *ngIf="FormularioVacuna.get('nombre')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
-  </div>
-    <!-- Input de Fecha -->
+        <ion-item>
+            <ion-icon name="skull-outline"></ion-icon>
+            <ion-input formControlName="nombre" class="inputs" label="Vacuna" labelPlacement="floating" placeholder="Pfizer"></ion-input>
+        </ion-item>
+        <div class="mt-1" *ngIf="FormularioVacuna.get('nombre')?.invalid && FormularioVacuna.get('nombre')?.touched">
+            <ion-badge *ngIf="FormularioVacuna.get('nombre')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
+        </div>
+        <!-- Input de Fecha -->
 
-    <ion-item>
-      <ion-icon name="calendar"></ion-icon>
-      <ion-input  displayFormat="DD/MM/YYYY" type="date" formControlName="fecha" class="inputs" label="Fecha" labelPlacement="floating"></ion-input>
-    </ion-item>
-    <div class="mt-1" *ngIf="FormularioVacuna.get('fecha')?.invalid && FormularioVacuna.get('fecha')?.touched">
-      <ion-badge *ngIf="FormularioVacuna.get('fecha')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
-  </div>
-    <ion-button  color="medium" type="submit" [disabled]="FormularioVacuna.invalid">
-      Actualizar Vacuna
-    <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
-    </ion-button>
-  </form>
+        <ion-item>
+            <ion-icon name="calendar"></ion-icon>
+            <ion-input displayFormat="DD/MM/YYYY" type="date" formControlName="fecha" class="inputs" label="Fecha" labelPlacement="floating"></ion-input>
+        </ion-item>
+        <div class="mt-1" *ngIf="FormularioVacuna.get('fecha')?.invalid && FormularioVacuna.get('fecha')?.touched">
+            <ion-badge *ngIf="FormularioVacuna.get('fecha')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
+        </div>
+        <div class="btn">
+            <ion-button shape="round" color="warning" type="submit" [disabled]="FormularioVacuna.invalid">
+                Actualizar Vacuna
+                <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
+            </ion-button>
+        </div>
 
-      <!-- Para regresar atrás -->
+    </form>
+
+    <!-- Para regresar atrás -->
     <!--   <ion-fab [routerLink]="['/vacunas']" slot="fixed" horizontal="end" vertical="bottom">
         <ion-fab-button color="dark">
             <ion-icon name="chevron-back"></ion-icon>
