--- a/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.scss
+++ b/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.scss
@@ -1,5 +1,15 @@
-.container-div{
-    background-color: #95a5a6a9;
+ion-content::part(background) {
+    background-image: url('https://res.cloudinary.com/duhm7ousd/image/upload/v1692322450/Imagenes-MediBook/img/fondo_movil_oto4cx.jpg');
+    background-size: cover;
+    background-position: start;
+    background-repeat: no-repeat;
+    /* Agrega un color de fondo con opacidad utilizando rgba() */
+    background-color: rgba(255, 255, 255, 0.9);
+    /* El último valor (0.5) controla la opacidad */
+}
+
+.container-div {
+    background-color: #e4e4e4a9;
     width: 350px;
     height: 500px;
     border-radius: 15px;
@@ -11,12 +21,11 @@
     margin-top: 20px;
 }
 
-
-ion-button{
+ion-button {
     margin-left: 15px;
 }
 
-.icon-img{
+.icon-img {
     width: 150px;
     height: 150px;
     position: relative;
@@ -24,47 +33,59 @@ ion-button{
     left: 100px;
 }
 
-.label-nombre{
+.label-nombre {
     position: relative;
+    color: rgb(58, 58, 58);
     left: 130px;
     top: 50px;
     font-size: 30px;
+    font-weight: bold;
 }
 
-.label-dosis{
+.label-dosis {
     font-size: 15px;
     width: 100px;
     position: relative;
-    top: 60px;
+    top: 80px;
     left: 90px;
 }
 
-.label-lapso{
+.label-lapso {
     position: relative;
-    top: 120px;
+    top: 110px;
     left: 20px;
     font-weight: 900;
     font-size: 20px;
 }
 
-.label-duracion{
+.label-duracion {
     position: relative;
-    top:  140px;
+    top: 120px;
     left: 25px;
     font-weight: 900;
     font-size: 20px;
 }
 
-.close{
+.close {
     margin-left: 50px;
     margin-top: 180px;
 }
 
-.edit{
+.edit {
     margin-left: -70px;
     margin-top: 180px;
 }
 
-ion-badge{
+ion-badge {
     margin-left: 30px;
+}
+
+.iconlol {
+    margin-right: 10px;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
