email agregado al cambiar password

--- a/src/app/private/pages/cambiar-password/cambiar-password.page.html
+++ b/src/app/private/pages/cambiar-password/cambiar-password.page.html
@@ -1,7 +1,7 @@
 <app-navbar [NameRoute]="'Cambiar contraseña'" [href]="'/profile'" />
 
 <ion-content [fullscreen]="true">
-  <ion-card class="mi-tarjeta">
+  <ion-card class="mi-tarjeta" *ngIf="user">
     <ion-grid class="ion-padding">
       <ion-row>
         <ion-card-content class="contenido">
@@ -9,7 +9,7 @@
             class="foto-perfil"
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Spider-Man.jpg/1200px-Spider-Man.jpg"
           />
-          <ion-label class="correo">correo@example.com</ion-label>
+          <ion-label class="correo"> {{user.email}} </ion-label>
         </ion-card-content>
       </ion-row>
       <ion-row>
